Fix whole page refresh/flicker on prediction updates

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -86,3 +86,7 @@
 body {
   background-color: #3d3d3d;
 }
+
+.predictions-wrapper {
+  min-height: 788px;
+}
